# pi-ups-dashboard

./: Cargo.toml  README.md
.github/workflows/: build-binaries.yml  ci.yml  release-bundle.yml  security-codeql.yml  security-rust-audit.yml  security-secrets.yml
binaries/: pi-ups-dashboard-linux-aarch64-musl  pi-ups-dashboard-linux-armv7-musleabihf
deploy/systemd/: deploy-binary-and-web.sh  deploy-precompiled.sh  install-or-update.sh  install-service.sh  install-update-timer.sh  pi-ups-dashboard-update.service  pi-ups-dashboard-update.timer  pi-ups-dashboard-updater.env.example  pi-ups-dashboard.service  update-from-release.sh
src/: main.rs
static/: app.css  app.js  index.html
tests/data/: apcaccess_malformed_notional.txt  apcaccess_notional.txt  apcaccess_onbatt_notional.txt
